# message_intelligence

./: .gitignore  CLAUDE.md  README.md  color-sandbox.html  next.config.ts  package-lock.json  package.json  playwright.config.ts  project_context.md  tech_spec.md
.github/workflows/: release.yml
docs/: SEMANTIC_SEARCH_STATUS.md
docs/superpowers/plans/: 2026-03-12-attachment-rendering.md  2026-03-13-semantic-search.md  2026-03-14-embeddings-pipeline-fix.md
docs/superpowers/specs/: 2026-03-13-semantic-search-design.md  2026-03-14-embeddings-pipeline-fix-design.md
e2e/: screenshots.spec.ts
landing/: index.html
mockups/: focused-dashboard-alltime.html  focused-dashboard-perchat-group.html  focused-dashboard-perchat.html  mockup-a-narrative-bento.html  mockup-b-story-scroll.html  mockup-c-focused-dashboard.html
scripts/: export_mobileclip.py  setup_models.sh
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/dev-bin/: search_eval.rs  test_chunking_baseline.rs  test_chunking_hybrid.rs  test_chunking_large.rs  test_chunking_sliding.rs  test_chunking_windows.rs  test_pipeline.rs
src-tauri/icons/: icon.icns
src-tauri/resources/models/: README.md
src-tauri/src/: error.rs  lib.rs  state.rs  telemetry.rs
src-tauri/src/analysis/: mod.rs
src-tauri/src/commands/: analytics.rs  attachments.rs  contacts.rs  embeddings.rs  fun.rs  messages.rs  mod.rs  onboarding.rs
src-tauri/src/db/: analytics_db.rs  chat_db.rs  contacts_db.rs  mod.rs  models.rs  schema.rs
src-tauri/src/embeddings/: chunker.rs  clip.rs  mod.rs  pipeline.rs
src-tauri/src/ingestion/: message_parser.rs  mod.rs  timestamp.rs
src-tauri/src/sidecar/: mod.rs
src/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
src/components/capsule/: capsule-view.tsx  emoji-frequency.tsx  fun-stats.tsx  message-heatmap.tsx  milestone-strip.tsx  (+1 more)
src/hooks/: use-analytics-tracking.ts  use-analytics.ts  use-messages.ts  use-search.ts
src/lib/: commands.ts
src/stores/: app-store.ts
src/types/: index.ts
(+21 files in other folders)
