[package]
name = "capsule"
version = "0.1.0"
description = "Privacy-first iMessage analytics"
authors = ["you"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
ort = { version = "2.0.0-rc.12", features = ["load-dynamic"] }
ndarray = "0.16"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp", "tiff"] }
tokenizers = { version = "0.20", default-features = false, features = ["onig"] }
